# DAVE-Recorder

./: README.md  main.py  pyproject.toml
.github/workflows/: build-windows.yml
scratch/: run_trace.py  test_e2e.py  test_frida.py  test_global_name.py  test_map.py  test_pattern.py  test_speaking.py  test_stable_dump.py  test_xref.py  trace_video.js
src/cli/: __init__.py  app.py  main.py
src/core/: audio_player.py  frida_manager.py  ogg_writer.py  process_manager.py  settings.py  user_resolver.py  video_manager.py
src/frida_scripts/: voice_hook.js
src/gui/: main.py  main_window.py  settings_dialog.py  user_card.py
tests/: conftest.py
tests/cli/: test_app.py
tests/core/: test_audio_player.py  test_frida_hooks.py  test_frida_logic.py  test_frida_manager.py  test_frida_ssrc_logic.py  test_ogg_writer.py  test_process_manager.py  test_user_resolver.py  test_video_hook_pattern.py  test_video_manager.py  test_video_sink_correlation.py
tests/gui/: test_main_window.py  test_settings.py
