[project]
name = "dave_recorder"
version = "0.1.0"
description = "Discord E2EE Audio Dumper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "av>=17.0.1",
    "frida-tools>=14.8.2",
    "numpy>=2.4.4",
    "pefile>=2024.8.26",
    "psutil>=7.2.2",
    "pyside6>=6.11.0",
    "requests>=2.33.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
dave-recorder = "gui.main:main"
dave-recorder-cli = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/gui", "src/cli"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
norecursedirs = ["scratch"]
